<resources>
    <string name="app_name">Shoe Shop</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="didn_t_have_account_register_now">didn\'t have account ? <font color='#01C6DB'>Register Now</font></string>
    <string name="shoes_image">shoes image</string>
    <string name="welcome">WELCOME</string>
    <string name="to_our_world">to the our Family</string>
    <string name="go_to_instructions_page"><![CDATA[go to instructions page -->]]></string>
    <string name="first_description">shoes app let you shopping with a different collections of shoe</string>
    <string name="second_description">you just need to press on adding button (the floating button) and add your shoe to the list</string>
    <string name="start_shoping">start shoping</string>
    <string name="add_shoe_button">add shoe button</string>
    <string name="logout">logout</string>
    <string name="name">name</string>
    <string name="company">company</string>
    <string name="shoe_size">shoe size</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
</resources>